force-app/main/default/objects/Feedback__c/fields/Additional_Comment__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comment__c</fullName>
    <label>Additional Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>