force-app/main/default/objects/Feedback__c/fields/Favourite_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Favourite_Sessions__c</fullName>
    <label>Favourite Sessions</label>
    <length>150</length>
    <type>Text</type>
</CustomField>