force-app/main/default/objects/Feedback__c/fields/Useful_In_Work__c.field-meta.xml
<CustomField>
    <fullName>Useful_In_Work__c</fullName>
    <label>Useful In Work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Useful</fullName>
            </value>
            <value>
                <fullName>Useless</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>